--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "better-sqlite3": "^12.5.0",
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
